--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,13 @@
 
 /* background-color: F4F3F2 !important; */
 
-#navbar {
+#navbar, footer {
     color: #000000 !important;
     background: #cffbff !important;
     background: linear-gradient(90deg,rgba(207, 251, 255, 1) 0%, rgba(178, 227, 252, 1) 50%, rgba(107, 211, 255, 1) 100%) !important;
     font-family: "Oswald", sans-serif;
     font-size: 0.9em;
+    font-weight: 500 !important;
 }
 
 #site-title {
