--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,10 @@
     font-weight: 500 !important;
 }
 
+footer {
+    font-size: 1.1em;
+}
+
 #site-title {
     font-family: "Oswald", "Roboto", sans-serif !important;
     font-weight: 550 !important;
