--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,16 @@ footer {
     font-size: 1.1em;
 }
 
+.carousel {
+   width: 100%;
+   max-height: 80vh;
+ }
+
+ .carousel-item > img {
+    object-fit: cover;
+    height: 80vh;
+ }
+
 #site-title {
     font-family: "Oswald", "Roboto", sans-serif !important;
     font-weight: 550 !important;
