--- a/assets/style.css
+++ b/assets/style.css
@@ -3,8 +3,8 @@
 
 #navbar, footer {
     color: #000000 !important;
-    background: #cffbff !important;
-    background: linear-gradient(90deg,rgba(207, 251, 255, 1) 0%, rgba(178, 227, 252, 1) 50%, rgba(107, 211, 255, 1) 100%) !important;
+    background: #c9f5ff !important;
+    background: linear-gradient(90deg,rgba(201, 245, 255, 1) 1%, rgba(71, 200, 255, 1) 60%, rgba(135, 193, 255, 1) 100%) !important;
     font-family: "Oswald", sans-serif;
     font-size: 0.9em;
     font-weight: 500 !important;
@@ -24,9 +24,26 @@ footer {
     height: 80vh;
  }
 
+ .carousel-caption {
+    position: absolute;
+    left: 0 !important;
+    width: 100%;
+    padding: 2rem !important;
+    background: #0000009f;
+ }
+
+ .carousel-button-holder {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background: #000000e7;
+    border-radius: 50%;
+    padding: .8rem;
+ }
+
 #site-title {
     font-family: "Oswald", "Roboto", sans-serif !important;
-    font-weight: 550 !important;
+    font-weight: 520 !important;
     font-size: 7vw;
 }
 
