--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@
     background: linear-gradient(90deg,rgba(180, 245, 250, 1) 1%, rgba(102, 214, 255, 1) 60%, rgba(66, 220, 255, 1) 100%) !important;
     font-family: "Oswald", sans-serif;
     font-size: 0.9em;
-    font-weight: 500 !important;
+    font-weight: 600 !important;
 }
 
 footer {
@@ -54,9 +54,14 @@ footer {
  }
 
 #site-title {
-    font-family: "Oswald", "Roboto", sans-serif !important;
-    font-weight: 520 !important;
-    font-size: 7vw;
+    font-family: "Barlow", "Oswald", "Roboto", sans-serif !important;
+    font-weight: 900 !important;
+    font-size: 5vw;
+    border-top: .3rem solid #000000;
+    border-bottom: .3rem solid #000000;
+    line-height: 1;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 /* Bootstrap Large Breakpoint (992px) */
@@ -119,6 +124,12 @@ footer {
         opacity: 1 !important;
         background: rgb(76, 197, 224) !important;
         transition: 1s;
+    }
+
+    #site-title {
+        margin: 0.7rem 0;
+        border-top: .4rem solid #000000;
+        border-bottom: .4rem solid #000000;
     }
 
 }
