--- a/assets/style.css
+++ b/assets/style.css
@@ -16,12 +16,12 @@ footer {
 
 .carousel {
    width: 100%;
-   max-height: 80vh;
+   max-height: 65vh;
  }
 
  .carousel-item > img {
     object-fit: cover;
-    height: 80vh;
+    height: 65vh;
  }
 
  .carousel-caption {
@@ -64,6 +64,10 @@ footer {
     padding-bottom: 0;
 }
 
+#nav-header {
+    background-color: #FFFFFF;
+}
+
 /* Bootstrap Large Breakpoint (992px) */
 @media screen and (min-width:992px) {
 
@@ -75,43 +79,6 @@ footer {
     .active {
         display: inline-block;
         position: relative;
-    }
-    .active::after {
-        content: '';
-        position: absolute;
-        width: 100%;
-        transform: scaleX(0);
-        height: 2px;
-        bottom: 0;
-        left: 0;
-        background-color: #000000;
-        transform-origin: bottom center;
-        transform: scaleX(1);
-        transform-origin: bottom center;
-    }
-    
-    /* Navbar Heading Underline Animation */
-    .hover-underline-animation {
-        display: inline-block;
-        position: relative;
-      }
-    
-    .hover-underline-animation::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #000000;
-    transform-origin: bottom center;
-    transition: transform 0.25s ease-out;
-    }
-    
-    .hover-underline-animation:hover::after {
-    transform: scaleX(1);
-    transform-origin: bottom center;
     }
 
     .dropdown-menu {
@@ -130,6 +97,16 @@ footer {
         margin: 0.7rem 0;
         border-top: .4rem solid #000000;
         border-bottom: .4rem solid #000000;
+    }
+
+    .nav-link {
+        background-color: #00000000;
+        transition: 0.4s;
+    }
+
+    .nav-link:hover {
+        background-color: #00000010;
+        transition: 0.4s;
     }
 
 }
