--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@
 
 #navbar, footer {
     color: #000000 !important;
-    background: #94f6ff !important;
+    background: #94c6ff !important;
     font-family: "Oswald", sans-serif;
     font-size: 0.9em;
     font-weight: 600 !important;
@@ -15,6 +15,11 @@
 
 footer {
     font-size: 1.1em;
+}
+
+button {
+    text-transform: uppercase !important;
+    font-family: "Oswald", sans-serif !important;
 }
 
 .carousel {
