--- a/assets/style.css
+++ b/assets/style.css
@@ -85,6 +85,10 @@ footer {
     background: #94c6ff !important;
 }
 
+#index-information {
+    background: #94c6ff;
+}
+
 /* Bootstrap Large Breakpoint (992px) */
 @media screen and (min-width:992px) {
 
