--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,26 @@ footer {
     font-size: 1.1em;
 }
 
+.index-ul {
+    list-style-type: '';
+}
+
+.index-ul > li {
+    margin-right: 3rem;
+}
+
+.small-image {
+    max-width: 30vw;
+    max-height: 70vh;
+    object-fit: contain;
+    border: 4px #fff solid;
+    border-radius: 3%;
+}
+
+.oswald-font {
+    font-family: "Oswald", sans-serif !important;
+}
+
 .carousel-caption > button {
     text-transform: uppercase !important;
     font-family: "Oswald", sans-serif !important;
@@ -87,6 +107,7 @@ footer {
 
 #index-information {
     background: #94c6ff;
+    font-size: 1.4em;
 }
 
 /* Bootstrap Large Breakpoint (992px) */
