--- a/assets/style.css
+++ b/assets/style.css
@@ -61,6 +61,10 @@ footer {
   line-height: 1;        /* kills any extra vertical whitespace */
 }
 
+.contact-ul > li > a {
+   border-radius: 0 !important; 
+}
+
 .small-image {
     max-width: 30vw;
     max-height: 70vh;
