feat: add full navbar functionality across site

--- a/assets/style.css
+++ b/assets/style.css
@@ -25,6 +25,7 @@ footer {
 .CIK-button {
     border-radius: 0% !important;
     padding: 1rem 2rem !important;
+    font-family: "Oswald", sans-serif !important;
 }
 
 .inherit-color {
